# MPC

./: CMakeLists.txt  main.cc  quadrupedMCL.xml
include/: Controller.hpp  Kinematics.hpp  MPC.hpp  Mathtool.hpp  MyProblem.hpp  ProdManifold.hpp  Sub_func.hpp  Trajectory.hpp  filtertool.hpp  globals.hpp
source/: Controller.cpp  Kinematics.cpp  MPC.cpp  Mathtool.cpp  MyProblem.cpp  ProdManifold.cpp  Trajectory.cpp  filtertool.cpp  globals.cpp
